@@ -1,6 +1,7 @@
 Version 1.20.4 *
 ==================
 - Fixed crash when saving a file to an existing file of the same project.
+- Fixed completer suggests DCO at wrong place.
 
 Version 1.20.3
 ==================
